--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
       <div class="jumbotron">
         <h1>WordPress Development for Marketers</h1>
         <p class="lead">I make awesome websites for online marketers, giving you more time to focus on what matters.</p>
-        <p><a class="btn btn-lg btn-success" href="#">I can build your marketing blog.</a></p>
+        <p><a class="btn btn-lg btn-portfolio" href="#">I can build your marketing blog.</a></p>
       </div>
       <div class="homepage">
         <div class="row">
@@ -58,7 +58,7 @@
           <section class="hp specalties">
             <div class="row">
               <div class="col-sm-4">
-                <img src="http://placehold.it/150x150">
+                <img src="http://placehold.it/150x150" class="img-circle outlined">
               </div>
               <div class="col-sm-8">
                  <h3>Specialties</h3>
@@ -73,19 +73,18 @@
                       Integrating all aspects of digital marketing seamlessly into a web experience
                     </li>
                   </ul>
-                  <a href="./about.html" class="btn btn-primary">Learn more about what I do <i class="fa fa-arrow-right"></i></a>
+                  <a href="./about.html" class="btn btn-portfolio-readmore">Learn more about what I do <i class="fa fa-arrow-right"></i></a>
               </div>
             </div>
           </section>
           
           <section class="hp featured">
-            <img src="http://placehold.it/350x150" class="pull-right">
-            <h3>Featured project</h3>
+            <h5>Featured project</h5>
             <h4>Tina Brown Public Relations (TBPR) Website Redesign</h4>
             <p>
               Tina Brown Public Relations is a local PR business that specializes in promoting clients. I was charged with rebuilding the out of date website.
             </p>
-            <a href="#" class="btn btn-md btn-info">See case study <i class="fa fa-arrow-right"></i></a>
+            <a href="#" class="btn btn-lg btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>
           </section>
           
           <section class="hp-testimonial">
