images plus design added

--- a/app/about.html
+++ b/app/about.html
@@ -105,7 +105,7 @@
               <p>AKA life beyond my computer screen</p>
               <ul>
                 <li>Yoga</li>
-                <li>My cats (Taco and Paco)</li>
+                <li>My cats <a href="https://static.pexels.com/photos/4602/jumping-cute-playing-animals.jpg">(Taco and Paco)</a></li>
                 <li>BBQ (especially brisket)</li>
                 <li>Travel (I've been to 20+ countries)</li>
               </ul>
