--- a/app/index.html
+++ b/app/index.html
@@ -58,19 +58,19 @@
           <section class="hp specalties">
             <div class="row">
               <div class="col-sm-4">
-                <img src="http://placehold.it/150x150" class="img-circle outlined">
+                <img src="images/laura-bradshaw.jpg" class="img-circle outlined">
               </div>
               <div class="col-sm-8">
-                 <h3>Specialties</h3>
+                 <h3>Hi, I'm Laura. Here's what I can do for you:</h3>
                   <ul>
                     <li>
-                      Helping online marketers build and optimize their online presence
+                      Help build your online presence by building a credible, fabulous blog
                     </li>
                     <li>
-                      Custom WordPress theme development
+                      Create custom WordPress themes 
                     </li>
                     <li>
-                      Integrating all aspects of digital marketing seamlessly into a web experience
+                      Integrate all aspects of your digital marketing strategy seamlessly into a web experience
                     </li>
                   </ul>
                   <a href="./about.html" class="btn btn-portfolio-readmore">Learn more about what I do <i class="fa fa-arrow-right"></i></a>
@@ -82,15 +82,15 @@
             <h5>Featured project</h5>
             <h4>Tina Brown Public Relations (TBPR) Website Redesign</h4>
             <p>
-              Tina Brown Public Relations is a local PR business that specializes in promoting clients. I was charged with rebuilding the out of date website.
+              TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.
             </p>
-            <a href="#" class="btn btn-lg btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>
+            <a href="./tbpr-site.html" class="btn btn-lg btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>
           </section>
           
           <section class="hp-testimonial">
             <div class="row">
               <div class="col-sm-2">
-                 <img src="http://placehold.it/100x100">
+                 <img src="images/tina-brown.jpg">
               </div>
               <div class="col-sm-10">
                 <blockquote>
@@ -106,7 +106,7 @@
           <section class="hp-testimonial">
             <div class="row">
               <div class="col-sm-2">
-                 <img src="http://placehold.it/100x100">
+                 <img src="images/karen-smith.jpg">
               </div>
               <div class="col-sm-10">
                 <blockquote>
@@ -128,9 +128,9 @@
       <div class="footer text-center">
         <p>Questions? Email me at laura@laurabradshaw.com</p>
         <ul class="list-inline">
-          <li><i class="fa fa-linkedin fa-lg"></i></li>
-          <li><i class="fa fa-github fa-lg"></i></li>
-          <li><i class="fa fa-twitter fa-lg"></i></li>
+          <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-github fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
         </ul>
       </div>
     </div>
