--- a/app/projects.html
+++ b/app/projects.html
@@ -69,7 +69,7 @@
               <h4>Tina Brown Public Relations</h4>
               <p class="date">May, 2015</p>
               <p>
-                TBPR is a local PR agency, in the Greater Boston area. Having been in the business for over ten years, their site needed a website redesign -- badly. I was brought in to handle it. 
+                TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.
               </p>
               <a href="./tbpr-site.html" class="btn btn-md btn-info">See case study <i class="fa fa-arrow-right"></i></a>
             </section>
