--- a/app/yoga-daily.html
+++ b/app/yoga-daily.html
@@ -106,7 +106,7 @@
 
             <section class="cta text-center">
               <h3>Want to build something like this?</h3>
-              <p>Special CTA here.</p>
+              <a href="#" class="btn btn-lg btn-portfolio">Get in touch now <i class="fa fa-envelope-o"></i></a>
             </section>
 
           </div><!--col-lg-12-->
