added styles for portfolio and case studies

--- a/app/tbpr-site.html
+++ b/app/tbpr-site.html
@@ -30,7 +30,7 @@
     <![endif]-->
 
     
-    <div class="container">
+    <div class="container" id="case-study">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li><a href="./index.html">Home</a></li>
@@ -51,14 +51,14 @@
         <p class="lead">
           Tina Brown Public Relations (TBPR) is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.
         </p>
-        <a href="#" class="btn btn-primary">Visit the website  <i class="fa fa-external-link"></i></a>
+        <a href="#" class="btn btn-portfolio-readmore">Visit the website  <i class="fa fa-external-link"></i></a>
       </div>
 
       <div class="case-study">
         <div class="row">
           <div class="col-lg-12">
             <!-- project image -->
-            <img src="http://placehold.it/850x350" class="img-responsive">
+            <img src="/images/tbpr.png" class="thumbnail-outlined">
 
             <section class="the-facts">
               <h3>Quick Facts</h3>
