--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
           <section class="hp specalties">
             <div class="row">
               <div class="col-sm-4">
-                <img src="images/laura-bradshaw.jpg" class="img-circle outlined">
+                <img src="images/laura-bradshaw.jpg" class="img-circle thumbnail-outlined">
               </div>
               <div class="col-sm-8">
                  <h3>Hi, I'm Laura. Here's what I can do for you:</h3>
@@ -79,18 +79,21 @@
           </section>
           
           <section class="hp featured">
-            <h5>Featured project</h5>
-            <h4>Tina Brown Public Relations (TBPR) Website Redesign</h4>
-            <p>
-              TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.
-            </p>
-            <a href="./tbpr-site.html" class="btn btn-lg btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>
+            <div class="scrum"></div>
+            <div class="wrapped">
+              <h5>Featured project</h5>
+              <h4>Tina Brown Public Relations (TBPR) Website Redesign</h4>
+              <p>
+                TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.
+              </p>
+              <a href="./tbpr-site.html" class="btn btn-lg btn-portfolio">See case study <i class="fa fa-arrow-right"></i></a>
+            </div>
           </section>
           
           <section class="hp-testimonial">
             <div class="row">
               <div class="col-sm-2">
-                 <img src="images/tina-brown.jpg">
+                 <img src="images/tina-brown.jpg" class="thumbnail-outlined">
               </div>
               <div class="col-sm-10">
                 <blockquote>
@@ -106,7 +109,7 @@
           <section class="hp-testimonial">
             <div class="row">
               <div class="col-sm-2">
-                 <img src="images/karen-smith.jpg">
+                 <img src="images/karen-smith.jpg" class="thumbnail-outlined">
               </div>
               <div class="col-sm-10">
                 <blockquote>
