--- a/app/about.html
+++ b/app/about.html
@@ -54,7 +54,7 @@
           <div class="col-lg-12">
             
             <section class="story">
-              <img src="http://placehold.it/350x350" class="pull-right">
+              <img src="images/laura-bradshaw.jpg" class="img-circle thumbnail-outlined pull-right">
               <h3>My story</h3>
               <p>
                 I build WordPress sites and blogs for people in the online marketing space. Always had a passion for online marketing and web development. Enjoy combining the two.
