content updates to HP, work, about page

--- a/app/about.html
+++ b/app/about.html
@@ -47,7 +47,7 @@
       </div> <!--header-->
 
       <div class="jumbotron">
-        <h1>Hello, I'm Laura.</h1>
+        <h1><span class="underline">Hello, I'm Laura.</span></h1>
       </div>
       <div class="about-container">
         <div class="row">
@@ -57,52 +57,52 @@
               <img src="images/laura-bradshaw.jpg" class="img-circle thumbnail-outlined pull-right">
               <h3>My story</h3>
               <p>
-                I build WordPress sites and blogs for people in the online marketing space. Always had a passion for online marketing and web development. Enjoy combining the two.
+                I build WordPress sites and blogs for people in the online marketing space. I always have had a passion for online marketing. I later fell in love with WordPress development. Now, I get to combine the two :)
               </p>
               <p>
-                Share my story about how I used to work at a marketing firm before building WordPress sites, so I understand both sides. (And how I have dabbled with SEO, content marketing, and social media personally.) 
+                I used to work at a marketing firm before learning how to build websites. Meaning I know what it's like to work at an agency. That's where I got my marketing chops, and was able to learn about SEO, content marketing, and social media strategy.
               </p>
               <p>
-                Mention other experience that marketing people can relate to -- like how I built the PR website for a family member 
+                One of the first sites I built for someone else was for Tina Brown Public relatsions.
               </p>
             </section>
             
             <section class="skills">
               <h3>What I'm good at</h3>
-              <p>Translation: what pays the bills</p>
+              <p><em>Translation: what pays the bills</em></p>
               <ul>
-                <li>Creating custom WordPress themes for online marketers</li>
-                <li>Optimizing WordPress sites for speed and user-friendliness</li>
-                <li>Creating Mobile-friendly websites using HTML and CSS best practices</li>
-                <li>Implementing social media sharing and other functionalities marketers love</li>
-                <li>Utilizing industry standard digital marketing tools like Google Analytics and Optimizely</li>
+                <li>Building custom WordPress themes and plugins</li>
+                <li>Optimizing websites for speed and user-friendliness</li>
+                <li>Creating responsive site designs using HTML and CSS best practices</li>
+                <li>Utilizing industry-standard digital marketing tools like Google Analytics and Optimizely</li>
               </ul>
             </section>
 
             <section class="skills">
               <h3>Here's what I'm diggin' into</h3>
-              <p>Not a pro...yet</p>
+              <p><em>Not quite a pro, but close</em></p>
               <ul>
                 <li>JavaScript (jQuery)</li>
                 <li>Git and Github</li>
                 <li>Gulp</li>
+                <li>MySQL</li>
               </ul>
             </section>
             
             <section class="coursework">
               <h3>Coursework and certifications</h3>
-              <p>A few places where I learned my craft</p>
+              <p><em>A few places where I learned my craft</em></p>
               <ul>
                 <li><a href="#">Skillcrush's WordPress Developer Blueprint</a></li>
                 <li><a href="#">Team Treehouse's WordPress Development Track</a></li>
-                <li><a href="#">Girl Develop It Intro to MySQL Course</a></li>
+                <li><a href="#">Girl Develop It's Intro to MySQL Course</a></li>
                 <li><a href="#">Women's Coding Collective PHP Basics Course</a></li>
               </ul>
             </section>
 
              <section class="interests">
               <h3>Other interests and hobbies</h3>
-              <p>AKA life beyond my computer screen</p>
+              <p><em>AKA my life beyond the computer screen</em></p>
               <ul>
                 <li>Yoga</li>
                 <li>My cats <a href="https://static.pexels.com/photos/4602/jumping-cute-playing-animals.jpg">(Taco and Paco)</a></li>
