--- a/app/projects.html
+++ b/app/projects.html
@@ -47,7 +47,7 @@
       </div> <!--header-->
 
       <div class="jumbotron">
-        <h1>My Work</h1>
+        <h1><span class="underline">My Work</span></h1>
       </div>
       <div class="project-container">
         <div class="row">
@@ -90,7 +90,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="thumbnail-outlined">
-                    <img src="http://placehold.it/350x150"/>
+                    <img src="/images/wp-plugin-SS.png"/>
                   </div>
                 </div>
                 <div class="col-md-8">
@@ -106,7 +106,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="thumbnail-outlined">
-                    <img src="http://placehold.it/350x150"/>
+                    <img src="/images/top-notch.png"/>
                   </div>
                 </div>
                 <div class="col-md-8">
