--- a/app/yoga-daily.html
+++ b/app/yoga-daily.html
@@ -78,7 +78,7 @@
               <section class="task">
                 <h3>The task</h3>
                 <p>
-                  TBPR is a wonderful, small-sized firm that is great at what they do. However, their website needed a makeover -- badly. Not only was the site not responsive, it also did not have Schema markup, open graph data, and other important SEO components. 
+                  Yoga daily is...
                 </p>
                 
               </section>
@@ -114,9 +114,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, suscipit, magnam? Ad, excepturi esse laudantium corrupti autem reprehenderit quidem, sit nesciunt tenetur labore, odio temporibus. Qui voluptates est repellat, aperiam.
                 </p>
                 <ol>
-                  <li>Increased domain authority by 7 points - domain authority is...</li>
+                  <li>Average 10 new email subsribers per day</li>
                   <li>
-                    Average time on page increased by one minute
+                    50,000 pageviews a month
                   </li>
                   <li>
                     Tina Brown reports that the number of leads increased as well
