fixed broken url paths

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Laura Bradshaw | Combining WordPress Development and Online Marketing</title>
-    <meta name="description" content="I make awesome WordPress sites for online marketers.">
+    <meta name="description" content="I make awesome WordPress sites for online marketers. Laura Bradshaw is a persona I made up for my Portfolio Dojo course.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico">
@@ -71,11 +71,12 @@
                       Build a custom (and dare I say fabulous) WordPress site, with a kickin' blog
                     </li>
                     <li>
-                      Integrate all aspects of your content marketing strategy seamlessly into a web experience
+                      Optimize every part of your site (yeah, the technical stuff, too) for the search engines
                     </li>
                     <li>
-                      One more thing here
+                      Integrate all aspects of your content marketing strategy seamlessly into a web experience
                     </li>
+                   
                   </ul>
 
                   <a href="./about.html" class="btn btn-portfolio-readmore">Learn more about what I do <i class="fa fa-arrow-right"></i></a>
@@ -90,7 +91,7 @@
                 <!-- <div class="col-md-8"> -->
 
                   <div class="thumbnail-outlined">
-                    <a href="./tbpr-site.html"><img src="/images/tbpr.png"/></a>
+                    <a href="images/tbpr-site.html"><img src="images/tbpr.png"/></a>
                   </div>
                 <!-- </div> -->
                 <!-- <div class="col-md-4"> -->
@@ -111,7 +112,7 @@
               <div class="col-sm-10">
                 <blockquote>
                   <p>
-                    Laura not only builds amazing WP sites, she also understands how to intergrate all the important functionalities online marketers care about.
+                    Laura not only builds amazing WordPress sites, she also understands how digital marketing works. She was able to intergrate all the important functionalities marketers care about.
                   </p>
                   <footer>Tina Brown, <cite title="tinabrownpr.com<">Founder of tinabrownpr.com</cite></footer>
                 </blockquote>
@@ -127,9 +128,9 @@
               <div class="col-sm-10">
                 <blockquote>
                   <p>
-                    I’ve worked with many web developers for the past 15 years, and Laura is top-notch.
+                    I’ve worked with many web folks for the past 8 years, and Laura is knows what's up.
 
-                    She is hyper-aware of both the web development process and marketing side of things. Laura is on top of things you may have forgotten. 
+                    She is hyper-aware of both the web development process and marketing side of things. I highly recommend her.
                   </p>
                   <footer>Karen Smith, <cite title="Top Notch Digital Marketing Studio">VP of Marketing at Top Notch Digital Marketing Studio</cite></footer>
                 </blockquote>
