--- a/app/about.html
+++ b/app/about.html
@@ -32,18 +32,24 @@
     
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./projects.html">My Work</a></li>
-          <li class="active"><a href="./about.html">About</a></li>
-        </ul>
-        <h3 class="text-muted">Laura Bradshaw</h3>
-        <ul class="nav nav-pills contact">
-          <li>laura@laurabradshaw.com</li>
-          <li><i class="fa fa-linkedin fa-lg"></i></li>
-          <li><i class="fa fa-github fa-lg"></i></li>
-          <li><i class="fa fa-twitter fa-lg"></i></li>
-        </ul>
+        <div class="row">
+          <div class="col-sm-7">
+            <h3 class="logo"><a href="./index.html">Laura Bradshaw</a></h3>
+              <ul class="nav nav-pills contact">
+                <li>laura@laurabradshaw.com</li>
+                <li><i class="fa fa-linkedin fa-lg"></i></li>
+                <li><i class="fa fa-github fa-lg"></i></li>
+                <li><i class="fa fa-twitter fa-lg"></i></li>
+              </ul>
+          </div>
+          <div class="col-sm-5">
+              <ul class="menu nav nav-pills pull-right">
+              <li class="active"><a href="./index.html">Home</a></li>
+              <li><a href="./projects.html">My Work</a></li>
+              <li><a href="./about.html">About</a></li>
+            </ul>
+          </div>
+        </div>
       </div> <!--header-->
 
       <div class="jumbotron">
@@ -115,12 +121,12 @@
         </div><!--row-->
       </div><!--project-container-->
 
-      <div class="footer text-center">
+     <div class="footer text-center">
         <p>Questions? Email me at laura@laurabradshaw.com</p>
         <ul class="list-inline">
-          <li><i class="fa fa-linkedin fa-lg"></i></li>
-          <li><i class="fa fa-github fa-lg"></i></li>
-          <li><i class="fa fa-twitter fa-lg"></i></li>
+          <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-github fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
         </ul>
       </div>
     </div>
