--- a/app/projects.html
+++ b/app/projects.html
@@ -32,18 +32,24 @@
     
     <div class="container" id="projects">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="./index.html">Home</a></li>
-          <li class="active"><a href="./projects.html">My Work</a></li>
-          <li><a href="./about.html">About</a></li>
-        </ul>
-        <h3 class="text-muted">Laura Bradshaw</h3>
-        <ul class="nav nav-pills contact">
-          <li>laura@laurabradshaw.com</li>
-          <li><i class="fa fa-linkedin fa-lg"></i></li>
-          <li><i class="fa fa-github fa-lg"></i></li>
-          <li><i class="fa fa-twitter fa-lg"></i></li>
-        </ul>
+        <div class="row">
+          <div class="col-sm-7">
+            <h3 class="logo"><a href="./index.html">Laura Bradshaw</a></h3>
+              <ul class="nav nav-pills contact">
+                <li>laura@laurabradshaw.com</li>
+                <li><i class="fa fa-linkedin fa-lg"></i></li>
+                <li><i class="fa fa-github fa-lg"></i></li>
+                <li><i class="fa fa-twitter fa-lg"></i></li>
+              </ul>
+          </div>
+          <div class="col-sm-5">
+              <ul class="menu nav nav-pills pull-right">
+              <li class="active"><a href="./index.html">Home</a></li>
+              <li><a href="./projects.html">My Work</a></li>
+              <li><a href="./about.html">About</a></li>
+            </ul>
+          </div>
+        </div>
       </div> <!--header-->
 
       <div class="jumbotron">
@@ -57,7 +63,7 @@
               <div class="row">
                 <div class="col-md-7">
                   <div class="thumbnail-outlined">
-                    <img src="/images/yoga-daily.png"/>
+                    <img src="images/yoga-daily.png"/>
                   </div>
                 </div>
                 <div class="col-md-5">
@@ -73,14 +79,14 @@
               <div class="row">
                 <div class="col-md-7">
                   <div class="thumbnail-outlined">
-                    <img src="/images/tbpr.png"/>
+                    <img src="images/tbpr.png"/>
                   </div>
                 </div>
                 <div class="col-md-5">
                   <h3>TBPR Website Redesign</h3>
                   <h4>Tina Brown Public Relations</h4>
                   <p class="date">May, 2015</p>
-                  <p>TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.</p>
+                  <p>TBPR is a local PR firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign—badly. I was brought in to handle it.</p>
                   <a href="./tbpr-site.html" class="btn btn-md btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>    
                 </div>
               </div>
@@ -90,13 +96,13 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="thumbnail-outlined">
-                    <img src="/images/wp-plugin-SS.png"/>
+                    <img src="images/wp-plugin-SS.png"/>
                   </div>
                 </div>
                 <div class="col-md-8">
                   <h3>Social Sharista WP Plugin</h3>
                   <p class="date">December, 2014</p>
-                  <p>A WordPress plugin that easily allows for social media sharing on posts, pages and even taxonomies (like tags and category pages). Add unique text to each share message, depending on the platform.</p>    
+                  <p>A WordPress plugin I built that allows for social media sharing on posts and pages. The plugin allows you to add unique text to each share message, depending on the platform.</p>    
                   <a href="#" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>
                 </div>
               </div>
@@ -106,14 +112,15 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="thumbnail-outlined">
-                    <img src="/images/top-notch.png"/>
+                    <img src="images/top-notch.png"/>
                   </div>
                 </div>
                 <div class="col-md-8">
-                  <h3>Marketing Specialist</h3>
+                  <h3>Internet Marketing Specialist</h3>
                   <h4>Top Notch Digital Marketing Studio</h4>
                   <p class="date">March 2013 - August 2014</p>
-                  <p>SEO, work at agency based in Philadelphia, PA. This is where I learned my digital marketing chops.</p>
+                  <p class="location"> Philadelphia, PA</p>
+                  <p>The fulltime gig that gave me marketing chops. At Top Notch, I focused on monitoring client's web traffic and improving search engine rankings.</p>
                   <a href="#" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>    
                 </div>
               </div>
@@ -126,9 +133,9 @@
       <div class="footer text-center">
         <p>Questions? Email me at laura@laurabradshaw.com</p>
         <ul class="list-inline">
-          <li><i class="fa fa-linkedin fa-lg"></i></li>
-          <li><i class="fa fa-github fa-lg"></i></li>
-          <li><i class="fa fa-twitter fa-lg"></i></li>
+          <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-github fa-lg"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
         </ul>
       </div>
     </div>
