more copy changes

--- a/app/about.html
+++ b/app/about.html
@@ -63,13 +63,13 @@
               <img src="images/laura-bradshaw.jpg" class="img-circle thumbnail-outlined pull-right">
               <h3>My story</h3>
               <p>
-                I build WordPress sites and blogs for people in the online marketing space. I always have had a passion for online marketing. I later fell in love with WordPress development. Now, I get to combine the two :)
+                I build Wordpress sites and blogs for people in the online marketing space. My passion for online marketing, combined with my love for Wordpress development, make me a website-building force to be reckoned with!
               </p>
               <p>
-                I used to work at a marketing firm before learning how to build websites. Meaning I know what it's like to work at an agency. That's where I got my marketing chops, and was able to learn about SEO, content marketing, and social media strategy.
+                Before striking out on my own, I used to work at a marketing firm. That's where I got my marketing chops, and was able to learn about SEO, content marketing, and social media strategy. Agency work also taught me to collaborate with others and be a team player—a skill that translates to all my client relationships.
               </p>
               <p>
-                One of the first sites I built for someone else was for Tina Brown Public relatsions.
+                One of the first sites I built for someone else was for Tina Brown Public Relations.
               </p>
             </section>
             
@@ -99,10 +99,10 @@
               <h3>Coursework and certifications</h3>
               <p><em>A few places where I learned my craft</em></p>
               <ul>
-                <li><a href="#">Skillcrush's WordPress Developer Blueprint</a></li>
-                <li><a href="#">Team Treehouse's WordPress Development Track</a></li>
-                <li><a href="#">Girl Develop It's Intro to MySQL Course</a></li>
-                <li><a href="#">Women's Coding Collective PHP Basics Course</a></li>
+                <li><a href="http://skillcrush.com/blueprint/freelance-wordpress-developer/" target="_blank">Skillcrush's WordPress Developer Blueprint</a></li>
+                <li><a href="https://teamtreehouse.com/tracks/wordpress-development" target="_blank">Team Treehouse's WordPress Development Track</a></li>
+                <li><a href="http://www.meetup.com/Girl-Develop-It-Philadelphia/events/160774282/" target="_blank">Girl Develop It's Intro to MySQL Course</a></li>
+                <li><a href="https://thewc.co/enroll/php" target="_blank">Women's Coding Collective PHP Basics Course</a></li>
               </ul>
             </section>
 
