--- a/app/projects.html
+++ b/app/projects.html
@@ -68,8 +68,8 @@
                 </div>
                 <div class="col-md-5">
                   <h3>Yoga Daily Blog</h3>
-                  <p class="date">April, 2015 - Present</p>
-                  <p>Custom built WordPress blog, featuring daily yoga tips curated from around the web.</p>
+                  <p class="date">April 2015 - Present</p>
+                  <p>Custom-built WordPress blog, featuring daily yoga tips curated from around the web.</p>
                   <a href="./yoga-daily.html" class="btn btn-md btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>    
                 </div>
               </div>
@@ -85,8 +85,8 @@
                 <div class="col-md-5">
                   <h3>TBPR Website Redesign</h3>
                   <h4>Tina Brown Public Relations</h4>
-                  <p class="date">May, 2015</p>
-                  <p>TBPR is a local PR firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign—badly. I was brought in to handle it.</p>
+                  <p class="date">May 2015</p>
+                  <p>TBPR is a local firm in the Greater Boston area. After ten years with no significant updates, their website needed a redesign -- badly. I was brought in to handle it.</p>
                   <a href="./tbpr-site.html" class="btn btn-md btn-portfolio-readmore">See case study <i class="fa fa-arrow-right"></i></a>    
                 </div>
               </div>
@@ -101,9 +101,9 @@
                 </div>
                 <div class="col-md-8">
                   <h3>Social Sharista WP Plugin</h3>
-                  <p class="date">December, 2014</p>
+                  <p class="date">December 2014</p>
                   <p>A WordPress plugin I built that allows for social media sharing on posts and pages. The plugin allows you to add unique text to each share message, depending on the platform.</p>    
-                  <a href="#" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>
+                  <a href="http://example.com/" target="_blank" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>
                 </div>
               </div>
             </section>
@@ -120,8 +120,8 @@
                   <h4>Top Notch Digital Marketing Studio</h4>
                   <p class="date">March 2013 - August 2014</p>
                   <p class="location"> Philadelphia, PA</p>
-                  <p>The fulltime gig that gave me marketing chops. At Top Notch, I focused on monitoring client's web traffic and improving search engine rankings.</p>
-                  <a href="#" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>    
+                  <p>The full-time gig that gave me marketing chops. At Top Notch, I focused on monitoring clients' web traffic and improving search engine rankings.</p>
+                  <a href="http://example.com/" target="_blank" class="btn btn-md btn-portfolio-readmore">Visit site <i class="fa fa-external-link"></i></a>    
                 </div>
               </div>
             </section>
