--- a/app/tbpr-site.html
+++ b/app/tbpr-site.html
@@ -56,9 +56,9 @@
       <div class="jumbotron">
         <h1>Tina Brown Public Relations</h1>
         <p class="lead">
-          Tina Brown Public Relations (TBPR) is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign—badly. I was brought in to handle it.
+          TBPR is a local firm in the Greater Boston area. After ten years with no significant updates, their website needed a redesign -- badly. I was brought in to handle it.
         </p>
-        <a href="#" class="btn btn-portfolio-readmore">Visit the website  <i class="fa fa-external-link"></i></a>
+        <a href="http://example.com/" target="_blank" class="btn btn-portfolio-readmore">Visit the website  <i class="fa fa-external-link"></i></a>
       </div>
 
       <div class="case-study">
@@ -98,22 +98,22 @@
               <!-- image showing the process -->
               <img src="http://placehold.it/750x350" class="img-responsive">
               <p>
-                In order to refresh the site, I took on a 6 step approach.
+                In order to refresh the site, I took a 6-step approach.
               </p>
               <ol>
                 <li>
-                  <strong>Current site analysis</strong> - I took an indepth look at the front-end and backend. I also looked at the current design plus content.
+                  <strong>Current site analysis</strong> - I took an in-depth look at the front end and back end. I also looked at the current design and content.
                 </li>
                 <li><strong>Ideation</strong> - After digging around the existing site, I gave suggestions on how the new site should appear.</li>
-                <li><strong>Mockups</strong> - Next, I created loose wireframes of what I envisioned the new site would look like. After a few revisions, ready to go.</li>
+                <li><strong>Mockups</strong> - Next, I created loose wireframes of what I envisioned the new site would look like. After a few revisions, I was ready to go.</li>
                 <li>
-                  <strong>Development</strong> - After getting approval on the new site's look and feel, I got to coding. I built a fresh WordPress theme using the Bootstrap framework. As I developed, I made sure to add necessary Schema and microformat markup. The longest phase by far, but by the end had the new site theme live. 
+                  <strong>Development</strong> - After getting approval on the new site's look and feel, I got to coding. I built a fresh WordPress theme using the Bootstrap framework. As I developed, I made sure to add necessary Schema and microformat markup. This was longest phase by far, but by the end I had the new site theme live. 
                 </li>
                 <li>
-                  <strong>SEO optimization</strong> - Aftwarwards, I went back in and added appropriate meta titles and descriptions using the SEO Yoast plugin, one of my favorites
+                  <strong>SEO optimization</strong> - Afterwards, I went back in and added appropriate meta titles and descriptions using the SEO Yoast plugin, one of my favorites.
                 </li>
                 <li>
-                  <strong>Final touches</strong> - Aside from redoing the site's theme, I also had the TBPR site move over to a better hosting plan, which sped up the site tremendously. I also set up static assets to be hosted on a CDN, which also helped tremendously with speed.  
+                  <strong>Final touches</strong> - Aside from redoing the site's theme, I also had the TBPR site move over to a better hosting plan, which sped up the site tremendously. Finally, I set up static assets to be hosted on a CDN, which got the site running faster than ever. 
                 </li>
               </ol>
              
@@ -123,7 +123,7 @@
               <h3>Outcome</h3>
                <img src="http://placehold.it/750x350" class="img-responsive">
               <p>
-                The new TBPR site is not only mobile-friendly, but also developmed in a way that is better for ranking in the search engines and intergrates with social networks. 
+                The new TBPR site is not only mobile-friendly, but also developed in a way that is better for ranking in the search engines and integrates with social networks. 
               </p>
               <p>Specifically, Tina Brown has reported that:</p>
               <ol>
@@ -141,7 +141,7 @@
 
             <section class="cta text-center">
               <h3>Want to build something like this?</h3>
-              <a href="#" class="btn btn-lg btn-portfolio">Get in touch now <i class="fa fa-envelope-o"></i></a>
+              <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=email@example.com" target="_blank" class="btn btn-lg btn-portfolio">Get in touch now <i class="fa fa-envelope-o"></i></a>
             </section>
 
           </div><!--col-lg-12-->
