--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                 <!-- <div class="col-md-4"> -->
                 <div class="text-center description">
                   <h3>Tina Brown Public Relations (TBPR) Website Redesign</h3>
-                  <p>TBPR is a local firm in the Greater Boston area. Having been in the industry for over ten years, their website needed a redesign -- badly. I was brought in to handle it.</p>
+                  <p>TBPR is a local firm in the Greater Boston area. After ten years with no significant updates, their website needed a redesign -- badly. I was brought in to handle it.</p>
                   <a href="./tbpr-site.html" class="btn btn-lg btn-portfolio">See case study <i class="fa fa-arrow-right"></i></a>  
                 </div> 
                <!--  </div> -->
@@ -112,7 +112,7 @@
               <div class="col-sm-10">
                 <blockquote>
                   <p>
-                    Laura not only builds amazing WordPress sites, she also understands how digital marketing works. She was able to intergrate all the important functionalities marketers care about.
+                    Laura not only builds amazing WordPress sites, she also understands how digital marketing works. She was able to integrate all the important functionalities marketers care about.
                   </p>
                   <footer>Tina Brown, <cite title="tinabrownpr.com<">Founder of tinabrownpr.com</cite></footer>
                 </blockquote>
