--- a/app/yoga-daily.html
+++ b/app/yoga-daily.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Laura Bradshaw | Combining WordPress Development and Online Marketing</title>
-    <meta name="description" content="I make awesome WordPress sites for online marketers.">
+    <meta name="description" content="An in-depth look at my Yoga Daily blog, where I curate daily yoga tips from around the web.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico">
@@ -56,9 +56,9 @@
         <div class="jumbotron">
           <h1>Yoga Daily</h1>
           <p class="lead">
-            A custom built WordPress blog, featuring daily yoga tips curated from around the web.
+            A custom-built WordPress blog, featuring daily yoga tips curated from around the web.
           </p>
-          <a href="#" class="btn btn-portfolio-readmore">Visit the website  <i class="fa fa-external-link"></i></a>
+          <a href="http://example.com/" target="_blank" class="btn btn-portfolio-readmore">Visit the website  <i class="fa fa-external-link"></i></a>
         </div>
 
         <div class="case-study">
@@ -74,10 +74,10 @@
                     Atque pariatur excepturi necessitatibus alias cupiditate, earum deserunt aspernatur sun
                   </li>
                   <li>
-                    Since the site has gone live, I have seen 25% increase in traffic month over month.
+                    Since the site has gone live, I have seen a 25% increase in traffic month over month.
                   </li>
                   <li>
-                    Despite it being a passion project, building the blog from the bottom taught me about creating custom post types in WordPress, trouble shooting cross browser compatibility issues, and more.
+                    Despite it being a passion project, building the blog from the bottom up taught me about creating custom post types in WordPress, troubleshooting cross-browser compatibility issues, and more.
                   </li>
                 </ol>
               </section>
@@ -85,7 +85,7 @@
               <section class="task">
                 <h3>The task</h3>
                 <p>
-                  Yoga Daily is a WordPress blog I created, inspired by ___. Something else here about why Yoga is a passion of mine, even though I do not like yoga.
+                  Yoga Daily is a Wordpress blog I created to help others find peace and relieve stress through my favorite kind of exercise. There’s nothing better than my morning yoga session to get me relaxed and “in the zone” before I begin my workday!
                 </p>
                 
               </section>
@@ -105,12 +105,12 @@
                     <strong>Content architecture</strong> - How will the content exist on the site?
                   </li>
                   <li>
-                    <strong>Mockups</strong> - Loosely getting an idea of the key components of the site
+                    <strong>Mockups</strong> - Loosely getting an idea of the key components of the site.
                   </li>
                   <li>
                     <strong>Development</strong> - Building out the custom WordPress theme, using the Bootstrap framework. Also adding SEO-friendly markup to the code.
                   </li>
-                  <li><strong>Production</strong> - Getting the Yoga Daily blog live on the internet so the world could see</li>
+                  <li><strong>Production</strong> - Getting the Yoga Daily blog live on the internet so the world could see.</li>
                 </ol>
                
               </section>
@@ -123,19 +123,19 @@
                 </p>
                 <p>Including:</p>
                 <ol>
-                  <li><strong>Custom post types </strong>- Which I created for my guest contributers</li>
+                  <li><strong>Custom post types </strong>- I created custom post types so I could add my favorite yoga-related products to the site, so readers could purchase them.</li>
                   <li>
-                    <strong>Troubleshooting cross browswer compatibility</strong> - A few of my design choices did not play nicely across some browsers. This gave me the chance to learn more about making a site look seamless across all web browsers.
+                    <strong>Troubleshooting cross-browser compatibility</strong> - A few of my design choices did not play nicely across some browsers. This gave me the chance to learn more about making a site look seamless across all web browsers.
                   </li>
                   <li>
-                    <strong>Git and Github</strong> - This was first opportunitiy I had to use Git and Github while creating a project of my own. 
+                    <strong>Git and Github</strong> - This was the first opportunity I had to use Git and Github while creating a project of my own. 
                   </li>
                 </ol>
               </section>
 
               <section class="cta text-center">
                 <h3>Want to build something like this?</h3>
-                <a href="#" class="btn btn-lg btn-portfolio">Get in touch now <i class="fa fa-envelope-o"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=email@example.com" target="_blank" class="btn btn-lg btn-portfolio">Get in touch now <i class="fa fa-envelope-o"></i></a>
               </section>
 
             </div><!--col-lg-12-->
