case studies plus images

--- a/app/tbpr-site.html
+++ b/app/tbpr-site.html
@@ -96,7 +96,7 @@
              <section class="what-i-did">
               <h3>What I did</h3>
               <!-- image showing the process -->
-              <img src="http://placehold.it/750x350" class="img-responsive">
+              <img src="images/tbpr-process.png" class="thumbnail-outlined">
               <p>
                 In order to refresh the site, I took a 6-step approach.
               </p>
@@ -121,7 +121,7 @@
             
             <section class="outcome">
               <h3>Outcome</h3>
-               <img src="http://placehold.it/750x350" class="img-responsive">
+               <img src="images/tbpr-final.png" class="thumbnail-outlined">
               <p>
                 The new TBPR site is not only mobile-friendly, but also developed in a way that is better for ranking in the search engines and integrates with social networks. 
               </p>
