--- a/app/yoga-daily.html
+++ b/app/yoga-daily.html
@@ -93,7 +93,7 @@
                <section class="what-i-did">
                 <h3>What I did</h3>
                 <!-- image showing the process -->
-                <img src="http://placehold.it/750x350" class="img-responsive">
+                <img src="images/yoga-daily-process.png" class="thumbnail-outlined">
                 <p>
                   In order to build the Yoga Daily Blog from the ground up, here's what I did:
                 </p>
@@ -117,7 +117,7 @@
               
               <section class="outcome">
                 <h3>Outcome</h3>
-                 <img src="http://placehold.it/750x350" class="img-responsive">
+                  <img src="images/yoga-daily-final.png" class="thumbnail-outlined">
                 <p>
                   Since I first began the site in April 2015, I have seen a 25% increase in page traffic month over month. While the blog may be a passion project, building it from the bottom taught me a lot. 
                 </p>
