minor case study copy tweaks

--- a/app/tbpr-site.html
+++ b/app/tbpr-site.html
@@ -74,7 +74,7 @@
                   The outdated WordPress website was in need for a new look—I was able to get the site up and running in 3 months
                 </li>
                 <li>
-                  Atque pariatur excepturi necessitatibus alias cupiditate, earum deserunt aspernatur sun
+                  Aside from updating the website's design, I also implemented SEO best practices in the code base 
                 </li>
                 <li>
                   Following the redesign, domain authority improved by 7 points and average time spent on page increased from 1 minute and 30 seconds to 2 minutes and 30 seconds
