--- a/app/yoga-daily.html
+++ b/app/yoga-daily.html
@@ -71,7 +71,7 @@
                 <h3>Quick Facts</h3>
                 <ol>
                   <li>
-                    Atque pariatur excepturi necessitatibus alias cupiditate, earum deserunt aspernatur sun
+                    Yoga is something I do daily. So, I wanted to create a blog of curated daily tips. 
                   </li>
                   <li>
                     Since the site has gone live, I have seen a 25% increase in traffic month over month.
