--- a/app/about.html
+++ b/app/about.html
@@ -44,9 +44,9 @@
           </div>
           <div class="col-sm-5">
               <ul class="menu nav nav-pills pull-right">
-              <li class="active"><a href="./index.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="./projects.html">My Work</a></li>
-              <li><a href="./about.html">About</a></li>
+              <li class="active"><a href="./about.html">About</a></li>
             </ul>
           </div>
         </div>
