--- a/app/tbpr-site.html
+++ b/app/tbpr-site.html
@@ -44,8 +44,8 @@
           </div>
           <div class="col-sm-5">
               <ul class="menu nav nav-pills pull-right">
-              <li class="active"><a href="./index.html">Home</a></li>
-              <li><a href="./projects.html">My Work</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li class="active"><a href="./projects.html">My Work</a></li>
               <li><a href="./about.html">About</a></li>
             </ul>
           </div>
